# ReSet-Daemon

./: .gitignore  Cargo.toml  README.md  api.rs  flake.nix  shell.nix  utils.rs
.direnv/: flake-profile-10-link  flake-profile-11-link  flake-profile-2-link  flake-profile-4-link  flake-profile-9-link
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
src/: api.rs  lib.rs  macros.rs  main.rs  reset_dbus.rs  tests.rs  utils.rs
src/audio/: audio.rs  audio_lib.rs  audio_manager.rs  audio_manager_dbus.rs  mod.rs
src/bluetooth/: bluetooth.rs  bluetooth_agent_dbus.rs  bluetooth_lib.rs  bluetooth_manager.rs  bluetooth_manager_dbus.rs  bluez_signals.rs  mod.rs
src/dbus/: audio.rs  bluetooth.rs  mod.rs  network.rs  reset_dbus.rs  utils.rs
src/dbus/bluetooth/: bluez_signals.rs  mod.rs
src/mock/: bluetooth.rs  mock_dbus.rs  mod.rs  network.rs  sound.rs  variant.rs
src/network/: connection.rs  mod.rs  network.rs  network_manager.rs  network_manager_dbus.rs  network_signals.rs
src/plugin/: functions.rs  utils.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs  lib_backup
