[package]
name = "reset_daemon"
version = "0.5.6"
edition = "2021"
description = "ReSet Daemon library and runner."
repository = "https://github.com/Xetibo/ReSet-Daemon"
license = "GPL-3.0-only"

[dependencies]
re_set-lib = "0.8.1"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
tokio = { version = "1.33.0", features = ["rt", "time", "net", "macros", "rt-multi-thread", "sync"] }
pulse = { version = "2.0", package = "libpulse-binding" }
