[package]
name = "reset_daemon"
version = "2.2.0"
edition = "2021"
description = "ReSet Daemon library and runner."
repository = "https://github.com/Xetibo/ReSet-Daemon"
license = "GPL-3.0-or-later"

[dependencies]
re_set-lib = "5.2.5"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
tokio = { version = "1.33.0", features = [
  "rt",
  "time",
  "net",
  "macros",
  "rt-multi-thread",
  "sync",
] }
pulse = { version = "2.0", package = "libpulse-binding" }
crossbeam = "0.8.4"
once_cell = "1.19.0"
libloading = "0.8.3"
serial_test = "3.0.0"
toml = "0.8.12"
